<resources>
    <string name="app_name">Smart Restaurant</string>
    <string name="facebook_app_id">1099750763508336</string>
    <string name="fb_login_protocol_scheme">fb1099750763508336</string>
    <string name="textViewUsername">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="google_map_api_key">AIzaSyDeiF1YUBDrOWXh_5vZPFjMcMmKw06ecdA</string>
    <string name="log_out">Log out</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact Us</string>
    <string name="app_info">Information</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_map">Map</string>
    <string name="tab_notification">Notification</string>
    <string name="tab_bookmark">Bookmark</string>
    <string name="my_favorite">My Favorite</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="no_result">No result found!</string>
    <string name="app_version">1.0.1</string>
    <string name="update_available">Update Available!</string>
    <string name="update_btn">Update</string>
    <string name="close_btn">Close</string>
    <string name="update_phase1">Please update to version </string>
    <string name="update_phase2"> for better experience</string>
    <string name="random">Random</string>
</resources>
