<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Toolbar Title"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="8pt"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_left_arrow"
            android:id="@+id/btn_menu"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:transitionName="img_transition"
                android:id="@+id/picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_centerInParent="true"
                />
            <ImageView
                android:layout_margin="10dp"
                android:id="@+id/btn_edit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_folder"
                android:layout_alignParentRight="true"
                />
            <ImageView
                android:layout_margin="10dp"
                android:id="@+id/btn_save"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_save"
                android:layout_below="@+id/btn_edit"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>



        <TextView
            android:transitionName="username_transition"
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/textViewUsername"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:transitionName="email_transition"
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_follow_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_follow_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="follower"
                    android:textAlignment="center"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_follow_num1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_follow_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="following"
                    android:textAlignment="center"
                    android:textSize="8pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_follow_num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_follow_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="share"
                    android:textAlignment="center"
                    android:textSize="8pt" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/my_favorite"
            android:textColor="@color/black"
            android:textSize="12pt"
            android:textStyle="bold" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>



</LinearLayout>